0.27.0 (unreleased)
-------------------
 - Add support for SOAP attachments (multipart responses). (Dave Wapstra, #302)
 - Update xsd:anyType to return the xml elements when no type is given via the
   xsi:type attribute (#284)


0.26.0 (2017-01-26)
-------------------
This release again introduces some backwords incompatibilties. The next release
will hopefully be 1.0 which will introduce semver.

 - **backwards-incompatible**: The Transport class now accepts a 
   ``requests.Session()`` object instead of ``http_auth`` and ``verify``. This
   allows for more flexibility.
 - **backwards-incompatible**: Zeep no longer sets a default cache backend.
   Please see http://docs.python-zeep.org/en/master/transport.html#caching for
   information about how to configure a cache.
 - Add ``zeep.xsd.SkipValue`` which instructs the serialize to ignore the 
   element.
 - Support duplicate target namespaces in the wsdl definition (#320)
 - Fix resolving element/types for xsd schema's with duplicate tns (#319)


0.25.0 (2017-01-23)
-------------------
 - **Important:** Add basic validation against the xsd. It currently will only
   validate the minOccurs/maxOccurs but this will be extended in the future.
 - Add support for duplicate namespace definitions. Previously imports for
   namespaces which were already imported were ignored. It will now search
   through all matching schemas with the tns to find a specific object (#204)
 - Fix xsd:extension for sequence -> choice. (#257)
 - Improve serializing attributes when the values were passed as a dict (#125)


0.24.0 (2016-12-16)
-------------------
 - Don't fail the parsing of responses if an xsi:type references an non-existing
   type. Instead log a message (#273)
 - Fix serializing etree.Element instances in the helpers.serialize function
   (#255)
 - Fix infinite loop during parsing of xsd.Sequence where max_occurs is 
   unbounded (#256)
 - Make the xsd.Element name kwarg required